@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/libnsfb
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*libnsfb-0_p13893 (28 Apr 2012)
+
+  28 Apr 2012; Michael Weber <xmw@gentoo.org> -libnsfb-0_p12271.ebuild,
+  -libnsfb-0_p12597.ebuild, +libnsfb-0_p13893.ebuild:
+  Version bump
 
 *libnsfb-0_p12597 (11 Jul 2011)
 
